force-app/main/default/objects/OrderHeader__c/fields/TollFee__c.field-meta.xml
<CustomField>
    <fullName>TollFee__c</fullName>
    <label>使用通行料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>