force-app/main/default/objects/OrderHeader__c/fields/TransportationMode__c.field-meta.xml
<CustomField>
    <fullName>TransportationMode__c</fullName>
    <label>輸送形態</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Charter</fullName>
                <default>true</default>
                <label>チャーター便</label>
            </value>
            <value>
                <fullName>Small</fullName>
                <label>小口便</label>
            </value>
            <value>
                <fullName>AccountTransfer</fullName>
                <label>荷主横持</label>
            </value>
            <value>
                <fullName>Route</fullName>
                <label>路線便</label>
            </value>
            <value>
                <fullName>Line</fullName>
                <label>幹線便</label>
            </value>
            <value>
                <fullName>Lawson</fullName>
                <label>ローソン増便</label>
            </value>
            <value>
                <fullName>ShippingOnly</fullName>
                <label>出庫のみ</label>
            </value>
            <value>
                <fullName>Other</fullName>
                <label>その他</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>