force-app/main/default/objects/OrderHeader__c/fields/TransportationModeLabel_F__c.field-meta.xml
<CustomField>
    <fullName>TransportationModeLabel_F__c</fullName>
    <description>{輸送形態}のラベル
項目：「遅延メッセージ」に使用する</description>
    <formula>CASE(TransportationMode__c
    , &quot;Charter&quot;, &quot;チャーター便&quot;
    , &quot;Small&quot;, &quot;小口便&quot;
    , &quot;AccountTransfer&quot;, &quot;荷主横持&quot;
    , &quot;Route&quot;, &quot;路線便&quot;
    , &quot;Line&quot;, &quot;幹線便&quot;
    , &quot;Lawson&quot;, &quot;ローソン増便&quot;
    , &quot;ShippingOnly&quot;, &quot;出庫のみ&quot;
    , &quot;その他&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>輸送形態ラベル</label>
    <type>Text</type>
</CustomField>