force-app/main/default/objects/OrderHeader__c/fields/UnitForShippingFeeCal__c.field-meta.xml
<CustomField>
    <fullName>UnitForShippingFeeCal__c</fullName>
    <label>運賃計算用単位</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>UnitForShippingFeeCal</valueSetName>
    </valueSet>
</CustomField>