force-app/main/default/objects/OrderHeader__c/fields/UnitPriceRoute__c.field-meta.xml
<CustomField>
    <fullName>UnitPriceRoute__c</fullName>
    <label>単価（路線便）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>