force-app/main/default/objects/OrderHeader__c/fields/UnloadingInformation__c.field-meta.xml
<CustomField>
    <fullName>UnloadingInformation__c</fullName>
    <label>卸情報</label>
    <length>255</length>
    <type>Text</type>
</CustomField>