force-app/main/default/objects/OrderHeader__c/fields/VehicleNumber__c.field-meta.xml
<CustomField>
    <fullName>VehicleNumber__c</fullName>
    <label>車番</label>
    <length>255</length>
    <type>Text</type>
</CustomField>