force-app/main/default/objects/OrderHeader__c/fields/WaitTimeFee__c.field-meta.xml
<CustomField>
    <fullName>WaitTimeFee__c</fullName>
    <label>待機料</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>