force-app/main/default/objects/OrderHeader__c/fields/WarehouseMasterName__c.field-meta.xml
<CustomField>
    <fullName>WarehouseMasterName__c</fullName>
    <label>倉庫名</label>
    <length>80</length>
    <type>Text</type>
</CustomField>