force-app/main/default/objects/OrderHeader__c/validationRules/CannotCreateOrderHeaderAccountInactive.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotCreateOrderHeaderAccountInactive</fullName>
    <active>true</active>
    <description>入力された「荷主」と契約を解除したため、注文を作成できません。</description>
    <errorConditionFormula>ISNEW() &amp;&amp;  NOT(Active_F__c )</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>入力された「荷主」と契約を解除したため、注文を作成できません。</errorMessage>
</ValidationRule>