force-app/main/default/objects/OrderHeader__c/validationRules/CannotCreateOrderHeaderSCompanyInactive.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotCreateOrderHeaderSCompanyInactive</fullName>
    <active>true</active>
    <description>入力された「配送会社」と契約を解除したため、注文を作成できません。</description>
    <errorConditionFormula>ISNEW() &amp;&amp;  ShippingCompany__r.DeliveryContractTermination__c</errorConditionFormula>
    <errorDisplayField>ShippingCompany__c</errorDisplayField>
    <errorMessage>入力された「配送会社」と契約を解除したため、注文を作成できません。</errorMessage>
</ValidationRule>