force-app/main/default/objects/OrderHeader__c/validationRules/CheckDriverFor9999.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckDriverFor9999</fullName>
    <active>true</active>
    <description>注文の車番「9999」に設定の時、ドライバーは入力できません。</description>
    <errorConditionFormula>/* 判定条件 */
 VehicleNumber__c == &apos;9999&apos;
&amp;&amp;
/* 判定項目 */
 NOT( ISBLANK( DriverMaster__c ) )</errorConditionFormula>
    <errorDisplayField>DriverMaster__c</errorDisplayField>
    <errorMessage>車番が「9999」の場合、ドライバーを入力できません。</errorMessage>
</ValidationRule>