force-app/main/default/objects/OrderHeader__c/validationRules/RequireBillingDateIfNotReception.validationRule-meta.xml
<ValidationRule>
    <fullName>RequireBillingDateIfNotReception</fullName>
    <active>true</active>
    <errorConditionFormula>/* 判定条件 */
NOT(ISPICKVAL(Status__c, &quot;Reception&quot;))
&amp;&amp;
/* 判定項目 */
ISBLANK(BillingDate__c)</errorConditionFormula>
    <errorDisplayField>BillingDate__c</errorDisplayField>
    <errorMessage>「請求日」を入力してください。</errorMessage>
</ValidationRule>