force-app/main/default/objects/OrderHeader__c/validationRules/ToReceptionCompletedAccBillingInfor.validationRule-meta.xml
<ValidationRule>
    <fullName>ToReceptionCompletedAccBillingInfor</fullName>
    <active>true</active>
    <description>注文を受付確認済み に変更の場合、荷主と配送会社の「締日」と「適応基準」は必須です</description>
    <errorConditionFormula>/* 判定条件 */
(ISPICKVAL( PRIORVALUE( Status__c ), &quot;Reception&quot;))
&amp;&amp; 
ISPICKVAL( Status__c , &quot;ReceptionCompleted&quot;)
&amp;&amp;
NOT(ISPICKVAL(TransportationMode__c, &quot;ShippingOnly&quot;))
&amp;&amp;
NOT(ISBLANK(ShippingCompany__c)) 
&amp;&amp; 
/* 判定項目 */
( ISBLANK(  TEXT( Account__r.ClosingDate__c )  )
||
ISBLANK(  TEXT(  Account__r.BillingDateType__c  )  )
||
ISBLANK(  TEXT( ShippingCompany__r.ClosingDate__c )  )
||
ISBLANK(  TEXT(  ShippingCompany__r.BillingDateType__c  )  )
)</errorConditionFormula>
    <errorMessage>注文の「状態：受付確認済み」の場合、荷主と配送会社の「締日」と「適応基準」を入力してください。</errorMessage>
</ValidationRule>