force-app/main/default/objects/OrderHeader__c/validationRules/ToReceptionCompletedAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>ToReceptionCompletedAccount</fullName>
    <active>true</active>
    <description>受付確認済 に変更した時、「荷主」とのリンク設定してない場合</description>
    <errorConditionFormula>/* 判定条件 */
(ISNEW() || ISPICKVAL( PRIORVALUE( Status__c ), &quot;Reception&quot;))
&amp;&amp; ISPICKVAL( Status__c , &quot;ReceptionCompleted&quot;)
&amp;&amp;
/* 判定項目 */
ISBLANK(Account__c)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>「荷主」を入力してください。</errorMessage>
</ValidationRule>