force-app/main/default/objects/OrderHeader__c/validationRules/ToReceptionCompletedDestination.validationRule-meta.xml
<ValidationRule>
    <fullName>ToReceptionCompletedDestination</fullName>
    <active>true</active>
    <description>受付確認済 に変更した時、「着地」マスタとのリンク設定してない場合</description>
    <errorConditionFormula>/* 判定条件 */
(ISNEW() || ISPICKVAL( PRIORVALUE( Status__c ), &quot;Reception&quot;))
&amp;&amp; ISPICKVAL( Status__c , &quot;ReceptionCompleted&quot;)
&amp;&amp; NOT(ISPICKVAL(TransportationMode__c, &quot;ShippingOnly&quot;))
&amp;&amp;
/* 判定項目 */
ISBLANK(Destination__c)</errorConditionFormula>
    <errorDisplayField>Destination__c</errorDisplayField>
    <errorMessage>「着地」を入力してください。</errorMessage>
</ValidationRule>