force-app/main/default/objects/OrderHeader__c/validationRules/ToReceptionCompletedExpectedDeliveryDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ToReceptionCompletedExpectedDeliveryDate</fullName>
    <active>true</active>
    <errorConditionFormula>/* 判定条件 */
NOT(
    OR(
        ISPICKVAL(Status__c, &quot;Reception&quot;),
        ISPICKVAL(Status__c, &quot;Cancel&quot;)
    )
)
&amp;&amp;
/* 判定項目 */
ISBLANK(ExpectedDeliveryDate__c)</errorConditionFormula>
    <errorDisplayField>ExpectedDeliveryDate__c</errorDisplayField>
    <errorMessage>「納品日」を入力してください。</errorMessage>
</ValidationRule>