force-app/main/default/objects/OrderHeader__c/validationRules/ToReceptionCompletedInvoiceAccount.validationRule-meta.xml
<ValidationRule>
    <fullName>ToReceptionCompletedInvoiceAccount</fullName>
    <active>true</active>
    <description>受付確認済 に変更した時、「請求先（集計使用名）」マスタとのリンク設定してない場合</description>
    <errorConditionFormula>/* 判定条件 */
(ISNEW() || ISPICKVAL( PRIORVALUE( Status__c ), &quot;Reception&quot;))
&amp;&amp; ISPICKVAL( Status__c , &quot;ReceptionCompleted&quot;)
&amp;&amp; NOT(ISPICKVAL(TransportationMode__c, &quot;ShippingOnly&quot;))
&amp;&amp;
/* 判定項目 */
ISBLANK(InvoiceAccount__c)</errorConditionFormula>
    <errorDisplayField>InvoiceAccount__c</errorDisplayField>
    <errorMessage>「請求先（集計使用名）」を入力してください。</errorMessage>
</ValidationRule>