force-app/main/default/objects/OrderHeader__c/validationRules/ToReceptionCompletedTransportationMode.validationRule-meta.xml
<ValidationRule>
    <fullName>ToReceptionCompletedTransportationMode</fullName>
    <active>true</active>
    <errorConditionFormula>/* 判定条件 */
(ISNEW() || ISPICKVAL( PRIORVALUE( Status__c ), &quot;Reception&quot;))
&amp;&amp; ISPICKVAL( Status__c , &quot;ReceptionCompleted&quot;)
&amp;&amp;
/* 判定項目 */
Destination__r.RouteDeliveryDeny__c  = true
&amp;&amp; ISPICKVAL( TransportationMode__c , &quot;Route&quot;)</errorConditionFormula>
    <errorDisplayField>TransportationMode__c</errorDisplayField>
    <errorMessage>「着地」が路線便不可になっています。</errorMessage>
</ValidationRule>