force-app/main/default/objects/OrderHeader__c/validationRules/ToReceptionCompletedUnitForShippingFee.validationRule-meta.xml
<ValidationRule>
    <fullName>ToReceptionCompletedUnitForShippingFee</fullName>
    <active>true</active>
    <description>受付確認済 に変更した時、「運賃計算用単位」設定してない場合</description>
    <errorConditionFormula>/* 判定条件 */
(ISNEW() || ISPICKVAL( PRIORVALUE( Status__c ), &quot;Reception&quot;))
&amp;&amp; ISPICKVAL( Status__c , &quot;ReceptionCompleted&quot;)
&amp;&amp; NOT(ISPICKVAL(TransportationMode__c, &quot;ShippingOnly&quot;))
&amp;&amp;
/* 判定項目 */
ISBLANK(TEXT(UnitForShippingFeeCal__c))</errorConditionFormula>
    <errorDisplayField>UnitForShippingFeeCal__c</errorDisplayField>
    <errorMessage>「運賃計算用単位」を入力してください。</errorMessage>
</ValidationRule>