force-app/main/default/objects/OrderHeader__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>TransportationMode__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>